welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: ')' expected but ',' found.
  for (x <- a,b,c,d) {
             ^countTeen:8: error: illegal start of simple expression
} 
^